5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1712_2498.log
== TEST (2019-05-08 15:33:17) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA >= hB):
	if(pA < pB):
		print(t)
	else:
		hA = hA * pB
		hB = hB * pB
		t = t + 1
		print(t)
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:22) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA >= hB):
	hA = hA * pB
	hB = hB * pB
	t = t + 1
	print(t)
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:41) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA >= hB):
	hA = hA * pB
	hB = hB * pB
	t = t + 1
print(t)
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:59) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA >= hB):
	hA = hA * pB
	hB = hB * pB
	t = t + 1
print(t)
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:35:35) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA < hB):
	hA = hA * pB
	hB = hB * pB
	t = t + 1
print(t)
-- OUTPUT:
337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:02) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA < hB):
	hA = hA * pA
	hB = hB * pB
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:56:53) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA < hB):
	hA = hA * pA
	hB = hB * pB
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:58:18) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA > hB):
	hA = hA * pA
	hB = hB * pB
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:00:30) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA <= hB):
	hA = hA * pA
	hB = hB * pB
	t = t + 1
	print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:00:54) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0

while (hA <= hB):
	hA = hA * pA
	hB = hB * pB
	t = t + 1
	print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:04:32) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0
hA = 0
hB = 1
while (hA <= hB):
	hA = hA * pA
	hB = hB * pB
	t = t + 1
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:05:03) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

pA = pA/100
pB = pB/100
t = 0
hA = 0
hB = 1
while (hA <= hB):
	hA = hA * pA
	hB = hB * pB
	t = t + 1
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:12:56) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

t = 0

while (hA <= hB):
	hA = hA * (pA / 100)
	hB = hB * (Pb / 100)
	t = t + 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    hB = hB * (Pb / 100)
NameError: name 'Pb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:13:02) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

t = 0

while (hA <= hB):
	hA = hA * (pA / 100)
	hB = hB * (Pb / 100)
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    hB = hB * (Pb / 100)
NameError: name 'Pb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:13:30) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

t = 0

while (hA <= hB):
	hA = hA * (pA / 100)
	hB = hB * (pB / 100)
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:14:54) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

t = 0

while (hA <= hB):
	hA = hA * (hA + (pA / 100))
	hB = hB * (hB + (pB / 100))
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:15:29) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

t = 0

while (hA <= hB):
	hA = hA + (hA * (pA / 100))
	hB = hB + (hB * (pB / 100))
	t = t + 1
print(t)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 21:17:15) 
-- CODE:
hA = int(input("Numero de habitantes de uma cidade A: "))
hB = int(input("Numero de habitantes de uma cidade B: "))
pA = float(input("Percentual de crescimento populacional da cidade A: "))
pB = float(input("Percentual de crescimento populacional da cidade B: "))

t = 0

while (hA <= hB):
	hA = hA + (hA * (pA / 100))
	hB = hB + (hB * (pB / 100))
	t = t + 1
print(t)
-- EXECUTION TIME:
0.18857
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
